feat(plugin): add upgrade functionality for installed plugins
* Implemented upgrade status checks for installed plugins.
* Added upgrade action to the plugin installation command.
* Updated language files for English, Portuguese, Russian, and Chinese to include "Upgrade" translations.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -285,6 +285,7 @@
   "plugin_wpm_create": "Create",
   "plugin_wpm_uninstall": "Uninstall",
   "plugin_wpm_install": "Install",
+  "plugin_wpm_upgrade": "Upgrade",
   "plugin_wpm_install_failed": "Failed to install plugin",
   "plugin_wpm_reload": "Reload",
   "plugin_wpm_open_directory": "Open plugin directory",
