--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -400,5 +400,12 @@
   "plugin_mediaplayer_no_media": "Нет медиа",
   "plugin_mediaplayer_artist": "Исполнитель",
   "plugin_mediaplayer_album": "Альбом",
-  "plugin_mediaplayer_duration": "Длительность"
+  "plugin_mediaplayer_duration": "Длительность",
+  "toolbar_copy": "Копировать",
+  "toolbar_copied": "Скопировано",
+  "toolbar_snooze": "Отложить",
+  "toolbar_snooze_3d": "Не напоминать 3 дня",
+  "toolbar_snooze_7d": "Не напоминать 7 дней",
+  "toolbar_snooze_1m": "Не напоминать 1 месяц",
+  "toolbar_snooze_forever": "Больше не показывать"
 }
