--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -415,5 +415,12 @@
   "plugin_mediaplayer_copy_info": "复制信息",
   "plugin_mediaplayer_no_media": "没有正在播放的媒体",
   "plugin_mediaplayer_artist": "艺术家",
-  "plugin_mediaplayer_album": "专辑"
+  "plugin_mediaplayer_album": "专辑",
+  "toolbar_copy": "复制",
+  "toolbar_copied": "已复制",
+  "toolbar_snooze": "稍后提醒",
+  "toolbar_snooze_3d": "3 天内不要提醒我",
+  "toolbar_snooze_7d": "7 天内不要提醒我",
+  "toolbar_snooze_1m": "1 个月内不要提醒我",
+  "toolbar_snooze_forever": "不再提示"
 }
