feat(theme): update theme configuration to use border width properties
* Changed `ResultItemBorderLeft` and `ResultItemActiveBorderLeft` to `ResultItemBorderLeftWidth` and `ResultItemActiveBorderLeftWidth` as integers for better type consistency.
* Updated JSON theme files to reflect these changes across various themes.
* Enhanced the `WoxTheme` class to parse and handle the new border width properties.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -401,6 +401,10 @@
   "plugin_mediaplayer_no_media": "Nenhum mídia",
   "plugin_mediaplayer_artist": "Artista",
   "plugin_mediaplayer_album": "Álbum",
+  "plugin_theme_ai_contacting": "Entrando em contato com a IA...",
+  "plugin_theme_ai_generating": "Gerando...",
+  "plugin_theme_ai_generated": "Tema gerado",
+  "plugin_theme_ai_waiting": "Aguardando resposta do provedor de IA",
   "plugin_mediaplayer_duration": "Duração",
   "toolbar_copy": "Copiar",
   "toolbar_copied": "Copiado",
