--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -400,6 +400,10 @@
   "plugin_mediaplayer_no_media": "Нет медиа",
   "plugin_mediaplayer_artist": "Исполнитель",
   "plugin_mediaplayer_album": "Альбом",
+  "plugin_theme_ai_contacting": "Подключаемся к ИИ...",
+  "plugin_theme_ai_generating": "Создаем...",
+  "plugin_theme_ai_generated": "Тема создана",
+  "plugin_theme_ai_waiting": "Ожидание ответа от провайдера ИИ",
   "plugin_mediaplayer_duration": "Длительность",
   "toolbar_copy": "Копировать",
   "toolbar_copied": "Скопировано",
