--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -416,6 +416,10 @@
   "plugin_mediaplayer_no_media": "没有正在播放的媒体",
   "plugin_mediaplayer_artist": "艺术家",
   "plugin_mediaplayer_album": "专辑",
+  "plugin_theme_ai_contacting": "正在连接 AI...",
+  "plugin_theme_ai_generating": "正在生成...",
+  "plugin_theme_ai_generated": "主题已生成",
+  "plugin_theme_ai_waiting": "正在等待 AI 服务返回结果",
   "toolbar_copy": "复制",
   "toolbar_copied": "已复制",
   "toolbar_snooze": "稍后提醒",
