--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -416,6 +416,10 @@
   "plugin_mediaplayer_no_media": "No media",
   "plugin_mediaplayer_artist": "Artist",
   "plugin_mediaplayer_album": "Album",
+  "plugin_theme_ai_contacting": "Contacting AI...",
+  "plugin_theme_ai_generating": "Generating...",
+  "plugin_theme_ai_generated": "Theme generated",
+  "plugin_theme_ai_waiting": "Waiting for response from AI provider",
   "toolbar_copy": "Copy",
   "toolbar_copied": "Copied",
   "toolbar_snooze": "Snooze",
