feat(ai): add no models available message and settings link
- Introduced a user-friendly message when no AI models or providers are configured.
- Added a link to navigate to AI settings for configuration.
- Updated localization files for English, Portuguese, Russian, and Chinese.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -161,6 +161,9 @@
   "ui_data_backup_type_manual": "Manual",
   "ui_ai_model_selector_name": "Name",
   "ui_ai_model_selector_model_name": "Model name",
+  "ui_ai_model_selector_no_models_title": "No AI provider configured",
+  "ui_ai_model_selector_no_models_desc": "Please go to Settings > AI to configure a provider and API key.",
+  "ui_ai_model_selector_open_ai_settings": "Open AI settings",
   "ui_ai_model_selector_cancel": "Cancel",
   "ui_ai_model_selector_save": "Save",
   "ui_app_width": "Window width",
