--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -149,6 +149,9 @@
   "ui_data_backup_type_manual": "Manual",
   "ui_ai_model_selector_name": "Nome",
   "ui_ai_model_selector_model_name": "Nome do modelo",
+  "ui_ai_model_selector_no_models_title": "Não há provedor de IA configurado",
+  "ui_ai_model_selector_no_models_desc": "Vá em Configurações > AI para configurar um provedor e a chave de API.",
+  "ui_ai_model_selector_open_ai_settings": "Abrir configurações de AI",
   "ui_ai_model_selector_cancel": "Cancelar",
   "ui_ai_model_selector_save": "Salvar",
   "ui_app_width": "Largura da janela",
