--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -149,6 +149,9 @@
   "ui_data_backup_type_manual": "Ручной",
   "ui_ai_model_selector_name": "Имя",
   "ui_ai_model_selector_model_name": "Имя модели",
+  "ui_ai_model_selector_no_models_title": "Провайдер ИИ не настроен",
+  "ui_ai_model_selector_no_models_desc": "Перейдите в Настройки > AI, чтобы указать провайдера и API‑ключ.",
+  "ui_ai_model_selector_open_ai_settings": "Открыть настройки AI",
   "ui_ai_model_selector_cancel": "Отмена",
   "ui_ai_model_selector_save": "Сохранить",
   "ui_app_width": "Ширина окна",
