--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -161,6 +161,9 @@
   "ui_data_backup_type_manual": "手动",
   "ui_ai_model_selector_name": "名称",
   "ui_ai_model_selector_model_name": "模型名称",
+  "ui_ai_model_selector_no_models_title": "未配置 AI 提供商",
+  "ui_ai_model_selector_no_models_desc": "请前往 设置 > AI 配置提供商和 API Key。",
+  "ui_ai_model_selector_open_ai_settings": "打开 AI 设置",
   "ui_ai_model_selector_cancel": "取消",
   "ui_ai_model_selector_save": "保存",
   "ui_app_width": "窗口宽度",
