feat(ui): add WoxCheckbox and WoxCheckboxTile components
* Introduced `WoxCheckbox` for a consistent checkbox style.
* Added `WoxCheckboxTile` for a compact checkbox with a label.
* Updated various UI components to utilize new checkbox implementations.
* Enhanced `WoxPathFinder` for improved directory selection functionality.
* Added `ui_save` and `ui_cancel` translations in multiple language files.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -159,6 +159,7 @@
   "ui_delete_row_confirm": "Tem certeza que deseja excluir esta linha?",
   "ui_cancel": "Cancelar",
   "ui_delete": "Excluir",
+  "ui_save": "Salvar",
   "ui_data_backup_auto_title": "Backup automático",
   "ui_data_backup_auto_tips": "Habilitar backup automático para salvar as configurações do Wox diariamente na pasta data",
   "ui_data_backup_auto_tips_prefix": "Habilitar backup automático para salvar dados diariamente na",
