--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -159,6 +159,7 @@
   "ui_delete_row_confirm": "Are you sure you want to delete this row?",
   "ui_cancel": "Cancel",
   "ui_delete": "Delete",
+  "ui_save": "Save",
   "ui_data_backup_auto_title": "Auto Backup",
   "ui_data_backup_auto_tips": "Enable auto backup to backup your data daily in data folder",
   "ui_data_backup_auto_tips_prefix": "Enable auto backup to backup your data daily in",
