--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -159,6 +159,7 @@
   "ui_delete_row_confirm": "Вы уверены, что хотите удалить эту строку?",
   "ui_cancel": "Отмена",
   "ui_delete": "Удалить",
+  "ui_save": "Сохранить",
   "ui_data_backup_auto_title": "Автоматическая резервная копия",
   "ui_data_backup_auto_tips": "Включить автоматическую резервную копию для ежедневного резервного копирования настроек Wox в папку data",
   "ui_data_backup_auto_tips_prefix": "Включить автоматическое резервное копирование данных ежедневно в",
