feat(nativecontextmenu): Enhance file plugin with system context menu and file type icons #4292
- Added functionality to display system context menu for files and folders in the file plugin.
- Implemented caching and retrieval of file type icons based on file extensions for better performance.
- Updated the plugin's query results to show appropriate icons for files and folders.
- Added new actions in the plugin for opening files, showing containing folders, and displaying context menus.
- Localized new context menu action in English, Portuguese, Russian, and Chinese.
- Introduced utility functions for handling file icons across different operating systems (Windows, macOS, Linux).

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -427,6 +427,7 @@
   "plugin_calculator_input_expression": "Input expression to calculate",
   "plugin_file_open": "Open",
   "plugin_file_open_containing_folder": "Open containing folder",
+  "plugin_file_show_context_menu": "Show system context menu",
   "plugin_file_everything_not_running": "Everything is not running",
   "plugin_file_everything_please_run_everything": "Please run Everything",
   "plugin_file_everything_goto_website": "Go to Everything website",
