--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -426,6 +426,7 @@
   "plugin_calculator_input_expression": "Digite a expressão para calcular",
   "plugin_file_open": "Abrir",
   "plugin_file_open_containing_folder": "Abrir pasta contendo",
+  "plugin_file_show_context_menu": "Mostrar menu de contexto do sistema",
   "plugin_file_everything_not_running": "Everything não está em execução",
   "plugin_file_everything_please_run_everything": "Por favor, execute o Everything",
   "plugin_file_everything_goto_website": "Ir para o site do Everything",
