--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -428,6 +428,7 @@
   "plugin_calculator_input_expression": "输入表达式进行计算",
   "plugin_file_open": "打开",
   "plugin_file_open_containing_folder": "打开所在文件夹",
+  "plugin_file_show_context_menu": "显示系统右键菜单",
   "plugin_file_everything_not_running": "Everything 未运行",
   "plugin_file_everything_please_run_everything": "请运行 Everything",
   "plugin_file_everything_goto_website": "前往 Everything 官网",
