feat(toolbar): add "More Actions" hotkey and improve toolbar layout
* Introduced a new hotkey for "More Actions" based on the platform.
* Enhanced the toolbar layout to dynamically adjust based on the presence of left messages.
* Improved action width calculation for better display of toolbar actions.
* Updated UI text references to use localized strings for consistency.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -487,5 +487,7 @@
   "toolbar_snooze_3d": "Don't remind me for 3 days",
   "toolbar_snooze_7d": "Don't remind me for 7 days",
   "toolbar_snooze_1m": "Don't remind me for 1 month",
-  "toolbar_snooze_forever": "Never show again"
+  "toolbar_snooze_forever": "Never show again",
+  "toolbar_more_actions": "More Actions",
+  "ui_actions": "Actions"
 }
