feat(toolbar): enhance toolbar actions with hotkey display for "More Actions"
* Added functionality to display the "More Actions" hotkey when there is a left message in the toolbar.
* Improved space management by conditionally showing the hotkey based on the presence of messages.
* Ensured that the hotkey is parsed and displayed correctly, enhancing user experience.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -432,8 +432,10 @@
   "plugin_file_everything_please_run_everything": "Please run Everything",
   "plugin_file_everything_goto_website": "Go to Everything website",
   "plugin_manager_query_failed": "%s query failed",
-  "plugin_manager_remove_from_favorite": "Remove from favorite",
-  "plugin_manager_add_to_favorite": "Add to favorite",
+  "plugin_manager_remove_from_favorite": "Unpin from current query",
+  "plugin_manager_add_to_favorite": "Pin in current query",
+  "plugin_manager_add_to_favorite_success": "Pinned, will be prioritized in current query",
+  "plugin_manager_remove_from_favorite_success": "Unpinned",
   "plugin_manager_invalid_query_type": "Invalid query type",
   "mru_remove_action": "Remove from MRU",
   "plugin_ai_chat_agents": "Agents",
