--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -431,8 +431,10 @@
   "plugin_file_everything_please_run_everything": "Пожалуйста, запустите Everything",
   "plugin_file_everything_goto_website": "Перейти на сайт Everything",
   "plugin_manager_query_failed": "Запрос %s не выполнен",
-  "plugin_manager_remove_from_favorite": "Удалить из избранного",
-  "plugin_manager_add_to_favorite": "Добавить в избранное",
+  "plugin_manager_remove_from_favorite": "Открепить от текущего запроса",
+  "plugin_manager_add_to_favorite": "Закрепить в текущем запросе",
+  "plugin_manager_add_to_favorite_success": "Закреплено, будет приоритетным в текущем запросе",
+  "plugin_manager_remove_from_favorite_success": "Откреплено",
   "plugin_manager_invalid_query_type": "Недопустимый тип запроса",
   "plugin_ai_chat_agents": "Агенты",
   "plugin_ai_chat_agents_tooltip": "Настройте ИИ-агентов с пользовательскими подсказками и инструментами",
