--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -431,8 +431,10 @@
   "plugin_file_everything_please_run_everything": "Por favor, execute o Everything",
   "plugin_file_everything_goto_website": "Ir para o site do Everything",
   "plugin_manager_query_failed": "Consulta %s falhou",
-  "plugin_manager_remove_from_favorite": "Remover dos favoritos",
-  "plugin_manager_add_to_favorite": "Adicionar aos favoritos",
+  "plugin_manager_remove_from_favorite": "Desafixar da consulta atual",
+  "plugin_manager_add_to_favorite": "Fixar na consulta atual",
+  "plugin_manager_add_to_favorite_success": "Fixado, será priorizado na consulta atual",
+  "plugin_manager_remove_from_favorite_success": "Desafixado",
   "plugin_manager_invalid_query_type": "Tipo de consulta inválido",
   "plugin_ai_chat_agents": "Agentes",
   "plugin_ai_chat_agents_tooltip": "Configure agentes de IA com prompts e ferramentas personalizados",
