--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -433,8 +433,10 @@
   "plugin_file_everything_please_run_everything": "请运行 Everything",
   "plugin_file_everything_goto_website": "前往 Everything 官网",
   "plugin_manager_query_failed": "%s 查询失败",
-  "plugin_manager_remove_from_favorite": "从收藏夹移除",
-  "plugin_manager_add_to_favorite": "添加到收藏夹",
+  "plugin_manager_remove_from_favorite": "取消查询置顶",
+  "plugin_manager_add_to_favorite": "在当前查询中置顶",
+  "plugin_manager_add_to_favorite_success": "已置顶，将在当前查询中优先显示",
+  "plugin_manager_remove_from_favorite_success": "已取消置顶",
   "plugin_manager_invalid_query_type": "无效的查询类型",
   "mru_remove_action": "从最近使用中移除",
   "plugin_ai_chat_agents": "智能体",
