feat(ui): enhance plugin detail view and update related components
* Added `WoxPluginDetailView` for displaying detailed plugin information.
* Updated `WoxSettingPluginView` to utilize the new detail view.
* Introduced `WoxPanel` for consistent styling across UI components.
* Modified `WoxPreviewView` to support the new `plugin_detail` preview type.
* Updated language files to include new UI strings for plugin details.
* Refactored image size handling in `WoxListItemView` for better layout.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -125,6 +125,8 @@
   "ui_ai_providers_host_required": "Host is required.",
   "ui_ai_model": "AI Model",
   "ui_search_plugins": "Search %d plugins",
+  "ui_plugin_author": "Author",
+  "ui_plugin_runtime": "Runtime",
   "ui_plugin_website": "Website",
   "ui_plugin_dev_tag": "dev",
   "ui_plugin_uninstall": "Uninstall",
