--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -125,6 +125,8 @@
   "ui_ai_providers_host_required": "API地址是必需的",
   "ui_ai_model": "AI模型",
   "ui_search_plugins": "搜索 %d 个插件",
+  "ui_plugin_author": "作者",
+  "ui_plugin_runtime": "运行时",
   "ui_plugin_website": "网站",
   "ui_plugin_dev_tag": "开发",
   "ui_plugin_uninstall": "卸载",
