refactor(ui): add installation progress tracking for plugins
* Implemented `InstallProgressCallback` to provide real-time feedback during plugin installation.
* Enhanced `InstallWithProgress` method to support progress updates for both normal and script plugins.
* Updated UI components to display installation progress messages in multiple languages.
* Refactored HTTP download method to include progress tracking capabilities.
* Adjusted `WoxQueryToolbarView` to ensure proper layout and responsiveness based on available space.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -348,7 +348,19 @@
   "plugin_wpm_uninstall": "Uninstall",
   "plugin_wpm_install": "Install",
   "plugin_wpm_upgrade": "Upgrade",
+  "plugin_wpm_start_using": "Start Using",
   "plugin_wpm_install_failed": "Failed to install plugin",
+  "plugin_install_progress_starting_download": "Starting download...",
+  "plugin_install_progress_downloading": "Downloading: %.1f%%",
+  "plugin_install_progress_downloaded_bytes": "Downloaded %d bytes",
+  "plugin_install_progress_download_complete": "Download complete",
+  "plugin_install_progress_extracting": "Extracting files...",
+  "plugin_install_progress_extraction_complete": "Extraction complete",
+  "plugin_install_progress_loading": "Loading plugin...",
+  "plugin_install_progress_loaded": "Plugin loaded successfully",
+  "plugin_install_progress_complete": "Installation complete",
+  "plugin_install_progress_preparing": "Preparing script plugin installation...",
+  "plugin_install_progress_parsing": "Parsing plugin metadata...",
   "plugin_wpm_reload": "Reload",
   "plugin_wpm_open_directory": "Open plugin directory",
   "plugin_wpm_open_directory_failed": "Failed to open plugin directory: %s",
@@ -383,6 +395,7 @@
   "plugin_wpm_path": "Path",
   "plugin_installer_install": "Install plugin",
   "plugin_installer_upgrade": "Upgrade plugin",
+  "plugin_installer_uninstall": "Uninstall plugin",
   "plugin_installer_reinstall": "Reinstall plugin",
   "plugin_installer_downgrade": "Downgrade plugin",
   "plugin_installer_action_start": "%s: %s",
@@ -390,6 +403,7 @@
   "plugin_installer_action_success": "Plugin %s: %s",
   "plugin_installer_verb_install_past": "installed",
   "plugin_installer_verb_upgrade_past": "upgraded",
+  "plugin_installer_verb_uninstall_past": "uninstalled",
   "plugin_installer_verb_reinstall_past": "reinstalled",
   "plugin_installer_verb_downgrade_past": "downgraded",
   "plugin_ai_command_name": "Name",
