--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -347,7 +347,19 @@
   "plugin_wpm_uninstall": "Desinstalar",
   "plugin_wpm_install": "Instalar",
   "plugin_wpm_upgrade": "Atualizar",
+  "plugin_wpm_start_using": "Começar a usar",
   "plugin_wpm_install_failed": "Falha ao instalar o plugin",
+  "plugin_install_progress_starting_download": "Iniciando download...",
+  "plugin_install_progress_downloading": "Baixando: %.1f%%",
+  "plugin_install_progress_downloaded_bytes": "Baixado %d bytes",
+  "plugin_install_progress_download_complete": "Download completo",
+  "plugin_install_progress_extracting": "Extraindo arquivos...",
+  "plugin_install_progress_extraction_complete": "Extração completa",
+  "plugin_install_progress_loading": "Carregando plugin...",
+  "plugin_install_progress_loaded": "Plugin carregado com sucesso",
+  "plugin_install_progress_complete": "Instalação completa",
+  "plugin_install_progress_preparing": "Preparando instalação do plugin de script...",
+  "plugin_install_progress_parsing": "Analisando metadados do plugin...",
   "plugin_wpm_reload": "Recarregar",
   "plugin_wpm_open_directory": "Abrir diretório do plugin",
   "plugin_wpm_open_directory_failed": "Falha ao abrir o diretório do plugin: %s",
@@ -382,6 +394,7 @@
   "plugin_wpm_path": "Caminho",
   "plugin_installer_install": "Instalar plugin",
   "plugin_installer_upgrade": "Atualizar plugin",
+  "plugin_installer_uninstall": "Desinstalar plugin",
   "plugin_installer_reinstall": "Reinstalar plugin",
   "plugin_installer_downgrade": "Fazer downgrade do plugin",
   "plugin_installer_action_start": "%s: %s",
@@ -389,6 +402,7 @@
   "plugin_installer_action_success": "Plugin %s: %s",
   "plugin_installer_verb_install_past": "instalado",
   "plugin_installer_verb_upgrade_past": "atualizado",
+  "plugin_installer_verb_uninstall_past": "desinstalado",
   "plugin_installer_verb_reinstall_past": "reinstalado",
   "plugin_installer_verb_downgrade_past": "rebaixado",
   "plugin_ai_command_name": "Nome",
