--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -347,7 +347,19 @@
   "plugin_wpm_uninstall": "Удалить",
   "plugin_wpm_install": "Установить",
   "plugin_wpm_upgrade": "Обновить",
+  "plugin_wpm_start_using": "Начать использовать",
   "plugin_wpm_install_failed": "Не удалось установить плагин",
+  "plugin_install_progress_starting_download": "Начало загрузки...",
+  "plugin_install_progress_downloading": "Загрузка: %.1f%%",
+  "plugin_install_progress_downloaded_bytes": "Загружено %d байт",
+  "plugin_install_progress_download_complete": "Загрузка завершена",
+  "plugin_install_progress_extracting": "Извлечение файлов...",
+  "plugin_install_progress_extraction_complete": "Извлечение завершено",
+  "plugin_install_progress_loading": "Загрузка плагина...",
+  "plugin_install_progress_loaded": "Плагин успешно загружен",
+  "plugin_install_progress_complete": "Установка завершена",
+  "plugin_install_progress_preparing": "Подготовка установки скрипт-плагина...",
+  "plugin_install_progress_parsing": "Анализ метаданных плагина...",
   "plugin_wpm_reload": "Перезагрузить",
   "plugin_wpm_open_directory": "Открыть каталог плагинов",
   "plugin_wpm_open_directory_failed": "Не удалось открыть каталог плагинов: %s",
@@ -382,6 +394,7 @@
   "plugin_wpm_path": "Путь",
   "plugin_installer_install": "Установить плагин",
   "plugin_installer_upgrade": "Обновить плагин",
+  "plugin_installer_uninstall": "Удалить плагин",
   "plugin_installer_reinstall": "Переустановить плагин",
   "plugin_installer_downgrade": "Понизить версию плагина",
   "plugin_installer_action_start": "%s: %s",
@@ -389,6 +402,7 @@
   "plugin_installer_action_success": "Плагин %s: %s",
   "plugin_installer_verb_install_past": "установлен",
   "plugin_installer_verb_upgrade_past": "обновлен",
+  "plugin_installer_verb_uninstall_past": "удален",
   "plugin_installer_verb_reinstall_past": "переустановлен",
   "plugin_installer_verb_downgrade_past": "понижен",
   "plugin_ai_command_name": "Название",
