--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -349,7 +349,19 @@
   "plugin_wpm_uninstall": "卸载",
   "plugin_wpm_install": "安装",
   "plugin_wpm_upgrade": "升级",
+  "plugin_wpm_start_using": "开始使用",
   "plugin_wpm_install_failed": "安装插件失败",
+  "plugin_install_progress_starting_download": "开始下载...",
+  "plugin_install_progress_downloading": "下载中: %.1f%%",
+  "plugin_install_progress_downloaded_bytes": "已下载 %d 字节",
+  "plugin_install_progress_download_complete": "下载完成",
+  "plugin_install_progress_extracting": "解压中...",
+  "plugin_install_progress_extraction_complete": "解压完成",
+  "plugin_install_progress_loading": "加载插件中...",
+  "plugin_install_progress_loaded": "插件加载成功",
+  "plugin_install_progress_complete": "安装完成",
+  "plugin_install_progress_preparing": "准备安装脚本插件...",
+  "plugin_install_progress_parsing": "解析插件元数据...",
   "plugin_wpm_reload": "重新加载",
   "plugin_wpm_open_directory": "打开插件目录",
   "plugin_wpm_open_directory_failed": "打开插件目录失败：%s",
@@ -384,6 +396,7 @@
   "plugin_wpm_path": "路径",
   "plugin_installer_install": "安装插件",
   "plugin_installer_upgrade": "升级插件",
+  "plugin_installer_uninstall": "卸载插件",
   "plugin_installer_reinstall": "重新安装插件",
   "plugin_installer_downgrade": "降级插件",
   "plugin_installer_action_start": "%s: %s",
@@ -391,6 +404,7 @@
   "plugin_installer_action_success": "插件%s: %s",
   "plugin_installer_verb_install_past": "已安装",
   "plugin_installer_verb_upgrade_past": "已升级",
+  "plugin_installer_verb_uninstall_past": "已卸载",
   "plugin_installer_verb_reinstall_past": "已重新安装",
   "plugin_installer_verb_downgrade_past": "已降级",
   "plugin_ai_command_name": "名称",
