feat(setting): introduce launch mode and start page settings
* Added new settings for `LaunchMode` and `StartPage` to enhance user control over Wox's behavior.
* Replaced the previous `QueryMode` with `LaunchMode` options: `fresh` and `continue`.
* Introduced `StartPage` options: `blank` and `most recently used (MRU)`.
* Updated relevant UI components and data models to reflect these changes.
* Removed the deprecated `QueryMode` enum and related references throughout the codebase.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -12,11 +12,18 @@
   "ui_selection_hotkey_tips": "Hotkeys to do actions on selected text or files",
   "ui_use_pinyin": "Use Pinyin",
   "ui_use_pinyin_tips": "When selected, Wox will convert Chinese into Pinyin",
-  "ui_query_mode": "Query Mode",
-  "ui_query_mode_tips": "Choose the default behavior when opening Wox",
-  "ui_query_mode_preserve": "Preserve last query",
-  "ui_query_mode_empty": "Always start with empty query",
-  "ui_query_mode_mru": "Show most recently used items",
+  "ui_launch_mode": "Launch Mode",
+  "ui_launch_mode_tips": "Controls the query box state when Wox transitions from hidden to visible",
+  "ui_launch_mode_fresh": "Start Fresh",
+  "ui_launch_mode_fresh_tips": "Clear the query box each time Wox is shown, ideal for quick new tasks",
+  "ui_launch_mode_continue": "Continue Last Query",
+  "ui_launch_mode_continue_tips": "Preserve the last query text with full selection, convenient for quick modifications",
+  "ui_start_page": "Start Page",
+  "ui_start_page_tips": "Controls what to display when the query box is empty",
+  "ui_start_page_blank": "Blank Page",
+  "ui_start_page_blank_tips": "Show nothing when the query is empty",
+  "ui_start_page_mru": "Most Recently Used",
+  "ui_start_page_mru_tips": "Show recently used items when the query is empty for quick access",
   "ui_hide_on_lost_focus": "Hide on lost focus",
   "ui_hide_on_lost_focus_tips": "When selected, Wox will hide when it loses focus",
   "ui_hide_on_start": "Hide on start",
