--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -12,13 +12,18 @@
   "ui_selection_hotkey_tips": "Atalhos para executar ações em texto ou arquivos selecionados",
   "ui_use_pinyin": "Use Pinyin",
   "ui_use_pinyin_tips": "Quando selecionado, o Wox vai converter Chinês em Pinyin",
-  "ui_last_query_mode": "Modo da Última Consulta",
-  "ui_last_query_mode_tips": "Escolha o comportamento padrão ao abrir o Wox",
-  "ui_last_query_mode_preserve": "Preservar última consulta",
-  "ui_last_query_mode_empty": "Sempre começar com consulta vazia",
-  "ui_last_query_mode_mru": "Mostrar itens usados recentemente",
-  "ui_last_query_mode_preserve": "Preservar última consulta",
-  "ui_last_query_mode_empty": "Sempre começar com consulta vazia",
+  "ui_launch_mode": "Modo de Inicialização",
+  "ui_launch_mode_tips": "Controla o estado da caixa de consulta quando o Wox muda de oculto para visível",
+  "ui_launch_mode_fresh": "Começar do Zero",
+  "ui_launch_mode_fresh_tips": "Limpar a caixa de consulta cada vez que o Wox for exibido, ideal para novas tarefas rápidas",
+  "ui_launch_mode_continue": "Continuar Última Consulta",
+  "ui_launch_mode_continue_tips": "Preservar o texto da última consulta com seleção completa, conveniente para modificações rápidas",
+  "ui_start_page": "Página Inicial",
+  "ui_start_page_tips": "Controla o que exibir quando a caixa de consulta estiver vazia",
+  "ui_start_page_blank": "Página em Branco",
+  "ui_start_page_blank_tips": "Não mostrar nada quando a consulta estiver vazia",
+  "ui_start_page_mru": "Usados Recentemente",
+  "ui_start_page_mru_tips": "Mostrar itens usados recentemente quando a consulta estiver vazia para acesso rápido",
   "ui_hide_on_lost_focus": "Ocultar na perda do foco",
   "ui_hide_on_lost_focus_tips": "Quando selecionado, o Wox será ocultado na perda do foco",
   "ui_hide_on_start": "Ocultar ao iniciar",
