--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -12,13 +12,18 @@
   "ui_selection_hotkey_tips": "Горячие клавиши для выполнения действий с выбранным текстом или файлами",
   "ui_use_pinyin": "Использовать Pinyin",
   "ui_use_pinyin_tips": "При выборе Wox будет преобразовывать Китайский в Pinyin",
-  "ui_last_query_mode": "Режим последнего запроса",
-  "ui_last_query_mode_tips": "Выберите поведение по умолчанию при открытии Wox",
-  "ui_last_query_mode_preserve": "Сохранить последний запрос",
-  "ui_last_query_mode_empty": "Всегда начинать с пустого запроса",
-  "ui_last_query_mode_mru": "Показать недавно использованные элементы",
-  "ui_last_query_mode_preserve": "Сохранить последний запрос",
-  "ui_last_query_mode_empty": "Всегда начинать с пустого запроса",
+  "ui_launch_mode": "Режим запуска",
+  "ui_launch_mode_tips": "Управляет состоянием поля запроса при переходе Wox из скрытого в видимое состояние",
+  "ui_launch_mode_fresh": "Начать заново",
+  "ui_launch_mode_fresh_tips": "Очищать поле запроса каждый раз при отображении Wox, идеально для быстрых новых задач",
+  "ui_launch_mode_continue": "Продолжить последний запрос",
+  "ui_launch_mode_continue_tips": "Сохранять текст последнего запроса с полным выделением, удобно для быстрых изменений",
+  "ui_start_page": "Начальная страница",
+  "ui_start_page_tips": "Управляет тем, что отображать при пустом поле запроса",
+  "ui_start_page_blank": "Пустая страница",
+  "ui_start_page_blank_tips": "Не показывать ничего при пустом запросе",
+  "ui_start_page_mru": "Недавно использованные",
+  "ui_start_page_mru_tips": "Показывать недавно использованные элементы при пустом запросе для быстрого доступа",
   "ui_hide_on_lost_focus": "Скрывать при потере фокуса",
   "ui_hide_on_lost_focus_tips": "При выборе Wox будет скрываться при потере фокуса",
   "ui_hide_on_start": "Скрывать при запуске",
