--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -12,11 +12,18 @@
   "ui_selection_hotkey_tips": "用于在选定的文本或文件上执行操作的快捷键",
   "ui_use_pinyin": "使用拼音",
   "ui_use_pinyin_tips": "搜索时，把中文转换为拼音",
-  "ui_query_mode": "查询模式",
-  "ui_query_mode_tips": "选择打开Wox时的默认行为",
-  "ui_query_mode_preserve": "保留上次查询",
-  "ui_query_mode_empty": "总是从空查询开始",
-  "ui_query_mode_mru": "显示最近使用的项目",
+  "ui_launch_mode": "启动模式",
+  "ui_launch_mode_tips": "控制 Wox 从隐藏变为显示时的查询框状态",
+  "ui_launch_mode_fresh": "全新开始",
+  "ui_launch_mode_fresh_tips": "每次显示时清空查询框，适合快速启动新任务",
+  "ui_launch_mode_continue": "继续上次查询",
+  "ui_launch_mode_continue_tips": "保留上次的查询内容并全选，方便快速修改查询",
+  "ui_start_page": "起始页",
+  "ui_start_page_tips": "控制查询框为空时显示的内容",
+  "ui_start_page_blank": "空白页",
+  "ui_start_page_blank_tips": "查询为空时不显示任何内容",
+  "ui_start_page_mru": "最近使用",
+  "ui_start_page_mru_tips": "查询为空时显示最近使用的项目，方便快速访问",
   "ui_hide_on_lost_focus": "失去焦点时隐藏",
   "ui_hide_on_lost_focus_tips": "选中后，Wox失去焦点时将隐藏",
   "ui_hide_on_start": "启动时隐藏",
