feat(selection): add internationalization support for selection actions
* Updated selection actions to use translated strings for better localization.
* Added new keys in language files for English, Portuguese, Russian, and Chinese.
* Enhanced user experience by providing localized action names in the selection plugin.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -514,5 +514,15 @@
   "toolbar_snooze_1m": "Don't remind me for 1 month",
   "toolbar_snooze_forever": "Never show again",
   "toolbar_more_actions": "More Actions",
-  "ui_actions": "Actions"
+  "ui_actions": "Actions",
+  "selection_copy": "Copy",
+  "selection_copy_to_clipboard": "Copy to clipboard",
+  "selection_copy_path": "Copy path",
+  "selection_share_with_airdrop": "Share with AirDrop",
+  "selection_share": "Share",
+  "selection_open_containing_folder": "Open containing folder",
+  "selection_preview": "Preview",
+  "selection_created_at": "Created At",
+  "selection_modified_at": "Modified At",
+  "selection_size": "Size"
 }
