feat(i18n): add "no matches" message for empty results in multiple languages
* Added the key `ui_no_matches` to `en_US.json`, `pt_BR.json`, `ru_RU.json`, and `zh_CN.json` for better user feedback.
* Updated `WoxListView` to display the "no matches" message when the item list is empty and a filter is applied.

--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -510,6 +510,7 @@
   "toolbar_snooze_forever": "Больше не показывать",
   "toolbar_more_actions": "Больше действий",
   "ui_actions": "Действия",
+  "ui_no_matches": "Нет совпадений",
   "selection_copy": "Копировать",
   "selection_copy_to_clipboard": "Копировать в буфер обмена",
   "selection_copy_path": "Копировать путь",
