--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -515,6 +515,7 @@
   "toolbar_snooze_forever": "Never show again",
   "toolbar_more_actions": "More Actions",
   "ui_actions": "Actions",
+  "ui_no_matches": "No matches",
   "selection_copy": "Copy",
   "selection_copy_to_clipboard": "Copy to clipboard",
   "selection_copy_path": "Copy path",
