--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -511,6 +511,7 @@
   "toolbar_snooze_forever": "Nunca mostrar novamente",
   "toolbar_more_actions": "Mais Ações",
   "ui_actions": "Ações",
+  "ui_no_matches": "Nenhuma correspondência",
   "selection_copy": "Copiar",
   "selection_copy_to_clipboard": "Copiar para a área de transferência",
   "selection_copy_path": "Copiar caminho",
